--- a/porsche/index.html
+++ b/porsche/index.html
@@ -165,11 +165,11 @@
                 <p>Your dream Porsche is closer than you think. Whether it’s a test drive, financing options, or expert
                 advice — we’re ready to help you drive something extraordinary.</p>
             <div class="contactus">
-                <p><strong>📞 Call us:</strong> (123) 456-7890</p>
-                <p><strong>📩 Email:</strong> contact@yourporscheshop.com</p>
-                <p><strong>ℹ️Follow Us:</strong>@yourporscheshop</p>
+                <p><strong> Call us:</strong> (123) 456-7890</p>
+                <p><strong> Email:</strong> contact@yourporscheshop.com</p>
+                <p><strong>Follow Us:</strong>@yourporscheshop</p>
                 <a href="#"><button id="up">Get me up</button></a>
-                <p style="font-size: 18px;">Thanks for coming by💛</p>
+                <p style="font-size: 18px;">Thanks for coming by</p>
             </div>
         </div><br><br>
         
